# trieseg

./: CMakeLists.txt  README.md  setup.py
src/: base_const.h  test-basic.cc  test-wordfinder.cc  test.cpp  trie_seg.cc  trie_seg.h  utf8.cc  utf8.h  utility.h  wordfinder.cc  wordfinder.h  wrap_pybind.cc
test/: wordfinder.py
